# SearchEngineUI

./: CMakeLists.txt  ConverterJSON.h  InvertedIndex.h  SearchServer.h  main.cpp  optionwindow.cpp  optionwindow.h  optionwindow.ui  readme.md  searchengine.cpp  searchengine.h
